--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body{
+    height: 100%;
+    width: 100%;
     background: url(./images/bgimage.avif) no-repeat left /cover;
     overflow: hidden;
 }
@@ -12,52 +14,73 @@ body{
     gap: 2rem;
 }
 label{
-    font-size: small;
+    
+    font-size: large;
     height: 1.25rem;
-    width:4rem;
+    width:8rem;
     font-weight: bold;
     color: black;
 }
 
-
 input{
     background-color: #ffff;
-    height: 1.25rem;
-    width: 12rem;
-    font-size: small;
+    height: 1.85rem;
+    width: 15rem;
+    font-size: large;
     border: 1px solid black;
     font-family: monospace;
     border: none;
     border-radius: 4px;
     outline: 1px solid navajowhite;
-    padding-left: 0.25rem;
+    padding-left: 0.75rem;
+    transition: 0.3s ease-in;
+}
+input:focus{
+    transform: scale(1.06);
 }
 .loginpopup{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding-top: 1rem;
-    gap:20px;
-    height: 60%;
-    width: 45%;
-    background: url(./images/moneymanagement-img.jpg) no-repeat center /cover;
+    gap:2rem;
+    height: 50%;
+    width: 40%;
+    background: url(./images/moneymanagement-img.jpg) center ;
     opacity: 80%;
+    border-radius: 12px;
+    overflow: hidden;
+    /* animation: zoominanime 1.4s ease-in forwards; */
 }
+
 .personaltracker-desc{
     font-weight: bolder;
     color: white;
     height: 6rem;
-    width: 14rem;
+    width: 25rem;
 }
 .custom-span{
-  font-size: 24px;
+  font-size: 34px;
   height: 3rem;
-  width: 12rem;
+  width: 25rem;
+
+
 }
 strong{
-    font-size: 28px;
+    letter-spacing: 1px;
+    font-size: 38px;
     color: rgb(225, 101, 6);
+  display: inline-block;
+  /* animation: zoominanime 1s ease-in forwards; */
+}
+
+@keyframes zoominanime{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .in-row{
     display: flex;
@@ -68,12 +91,12 @@ strong{
 }
 .loginbtn{
     cursor: pointer;
-    height: 1.35rem;
-    width: 4.25rem;
+    height: 1.85rem;
+    width: 5.25rem;
     border: none;
     border-radius: 5px;
     letter-spacing: 1px;
-    font-size: small;
+    font-size: large;
     font-family: monospace;
     font-weight: bolder;
     color: white;
@@ -85,4 +108,55 @@ strong{
 .loginbtn:disabled{
     opacity: 0.4;
     cursor: not-allowed;
+}
+.img-container{
+    height: 5rem;
+    width: 100%;
+    background: linear-gradient(to right, chocolate, orange);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+img{
+    height: 2rem;
+    max-width: 2rem;
+}
+.title-span{
+    color: black;
+    font-size: 24px;
+    font-weight: bolder;
+    letter-spacing: 2px;
+}
+u{
+    color: white;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 30px;
+}
+hr{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 0.10rem;
+    width: 90%;
+    background-color: black;
+    border: none;
+}
+.newuser{
+    position: relative;
+    bottom: 2rem;
+}
+a{
+    margin-left: 2px;
+    color: indigo;
+    text-decoration: underline;
+    cursor: pointer;
+}
+.newuser-span{
+    font-size: medium;
+    font-weight: bold;
+    letter-spacing: 1.2px;
 }
