--- a/newuserstyle.css
+++ b/newuserstyle.css
@@ -34,6 +34,13 @@ body{
     font-weight: bold;  
     opacity: 80%;  
 }
+.img-container{
+    object-fit: cover;
+    object-position: top;
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+}
 label{
     height: 1.5rem;
     width: 12rem;
